--- a/nyc_taxi_trip.ipynb
+++ b/nyc_taxi_trip.ipynb
@@ -3,7 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyNxP93+m1ArwIiNb8ih0F6h",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +16,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/vamshi12vamshi/nyc_taxi_trip/blob/main/nyc_taxi_trip.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "source": [
@@ -27,7 +39,7 @@
         "id": "u9nD03szfy8x",
         "outputId": "7982c922-2b99-4ed3-defc-7b1bc32e5463"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -52,7 +64,7 @@
       "metadata": {
         "id": "oNfPlazhgC6E"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -63,7 +75,7 @@
       "metadata": {
         "id": "UWrtIyIkgC8y"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -78,7 +90,7 @@
         "id": "cKoEz_oEgC_q",
         "outputId": "ac323a57-109f-4a15-eacb-c1d08ef57b20"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -113,7 +125,7 @@
         "id": "FmErG52bgDBw",
         "outputId": "915a1bda-e709-4241-a9b7-51dc107f2807"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -144,7 +156,7 @@
         "id": "H_-ZLbvcgDFO",
         "outputId": "5355911b-e265-4c5f-d3e5-486b4129c4cd"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -535,7 +547,7 @@
         "id": "6D42dMAEkhd9",
         "outputId": "eb0ca8cc-48dc-4282-bce4-bc2637efc49f"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -572,7 +584,7 @@
         "id": "UFFmJRvevcSE",
         "outputId": "0110e454-3bd5-4316-a535-53a6d4c345e8"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -625,7 +637,7 @@
         "id": "yZD9KfOg6Oef",
         "outputId": "8babaf09-e4d9-4c21-88ab-48421cade0bf"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1013,7 +1025,7 @@
       "metadata": {
         "id": "5NKtB67ZgDHc"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1028,7 +1040,7 @@
         "id": "Zszv_2WDgDJN",
         "outputId": "e27d20e9-a7b7-4895-f670-9839319e821f"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1071,7 +1083,7 @@
       "metadata": {
         "id": "Tkbl7Y1GgDLF"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1087,7 +1099,7 @@
         "id": "vpnq6UOUgDOX",
         "outputId": "5424c7bc-d477-47c6-e34e-5f97cda0590c"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1458,7 +1470,7 @@
       "metadata": {
         "id": "lVx8jwn8l7dO"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1470,7 +1482,7 @@
       "metadata": {
         "id": "FjETb3fh7CzC"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1482,7 +1494,7 @@
       "metadata": {
         "id": "f-J6l0V58L9X"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1498,7 +1510,7 @@
         "id": "NvJkI4Vrm5Kw",
         "outputId": "bff52fd7-7683-4f35-9760-beeb0eec1cea"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1939,7 +1951,7 @@
         "id": "x_mZkrvhnAf9",
         "outputId": "d1aafa4e-731a-42f6-a6f4-cacc77c52faf"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1983,7 +1995,7 @@
         "id": "4BWXCnpHolhK",
         "outputId": "6596fde7-1bd7-430b-82d3-55d5dc47c178"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2016,7 +2028,7 @@
         "id": "CZWzbJfXyU7t",
         "outputId": "20946836-4ceb-4c42-8b39-32da0b6b9209"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2081,7 +2093,7 @@
         "id": "3Tjx5NBFsgES",
         "outputId": "e074e7f4-787f-42ca-c6b9-e42b633445a6"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2127,7 +2139,7 @@
         "id": "L5hlu7cpsy1m",
         "outputId": "f9594b34-270d-48ee-8a16-7e45bb4fc415"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2162,7 +2174,7 @@
         "id": "Pn-ysds2eTim",
         "outputId": "fa8c0e9f-595a-4e42-ba12-eae74932c0e1"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2205,7 +2217,7 @@
         "id": "p9L7Lfz6eMdw",
         "outputId": "ac05afc4-4e59-40c7-fbe6-594f127c4f6f"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2231,7 +2243,7 @@
         "id": "fsmiV0fI6jd9",
         "outputId": "1c8846e0-f4bf-4bc6-82c4-c96c58b8d8dc"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2291,7 +2303,7 @@
         "id": "lgNpCyZB6CEv",
         "outputId": "13a0deed-2ddc-44bc-ee6d-18874080f408"
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2346,7 +2358,7 @@
         "id": "oTQWzsv_9hTX",
         "outputId": "07192f6e-6f6e-436a-c310-2f5325f1aafa"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2385,7 +2397,7 @@
       "metadata": {
         "id": "UhZaZbr-9Cn6"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2409,7 +2421,7 @@
         "id": "LZfkf0qt-Qu7",
         "outputId": "3ff30d37-b71f-4f7b-e8bf-d419b667eceb"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2438,7 +2450,7 @@
       "metadata": {
         "id": "-uX293Tf9iHC"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2454,7 +2466,7 @@
         "id": "APIU-3eM-dII",
         "outputId": "f5f6e6dc-f751-4bd8-e43d-3fc46ddfeea7"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2902,7 +2914,7 @@
         "id": "ZqkPIZUrP_gW",
         "outputId": "d0f21f00-9cee-4797-d3ac-f7f8527dec38"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2934,7 +2946,7 @@
         "id": "VC3UIZu9Anjl",
         "outputId": "200bc908-ecaa-4bc6-85b1-5bbe74267508"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2969,7 +2981,7 @@
       "metadata": {
         "id": "n2uyvDVoOQOz"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2980,7 +2992,7 @@
       "metadata": {
         "id": "pawU57tsQLjz"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2996,7 +3008,7 @@
         "id": "U3EdOO-URIb0",
         "outputId": "d87e7803-0459-499d-8dcc-9b155806315b"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3447,7 +3459,7 @@
         "id": "zmSdFgrmSziI",
         "outputId": "786559c7-3f4d-43fe-ff34-3d448b8fb946"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3475,7 +3487,7 @@
         "id": "yiONLOu1Te1A",
         "outputId": "8fad8f30-230f-46ca-cd0e-9c4d78a634d0"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3501,7 +3513,7 @@
         "id": "jjC5myTbUBKg",
         "outputId": "0ee38308-6651-4f89-8c30-9a86c0c1463a"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3548,7 +3560,7 @@
       "metadata": {
         "id": "EJShneoFU2rF"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3563,7 +3575,7 @@
         "id": "t1JgJyqRV2x8",
         "outputId": "cfb124bf-5611-45bd-f4f1-c706ede4bcd5"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3611,7 +3623,7 @@
         "id": "MkDoLKHlXZ2v",
         "outputId": "f72d66a3-63ed-4cd4-b338-d34f36e46d61"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3655,7 +3667,7 @@
         "id": "zusUDFhMX8Br",
         "outputId": "d993ef6a-dc72-4a57-dd32-be4e9905a900"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3702,7 +3714,7 @@
         "id": "wSCxQq8oaI4j",
         "outputId": "1990a69b-2c69-48ff-f000-af10188d0b84"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3725,7 +3737,7 @@
       "metadata": {
         "id": "UpG7xDBtZlez"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3740,7 +3752,7 @@
         "id": "TW5G0_27ZwC8",
         "outputId": "e3476b3c-5538-449d-bcd8-8c5adf3f5575"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3781,7 +3793,7 @@
         "id": "cfKhC0AvbuA2",
         "outputId": "5cbc3855-b5cf-49b0-c1a2-ebcf28f0cf7f"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3818,7 +3830,7 @@
         "id": "31oV-R0HAFCL",
         "outputId": "7ce14e15-c121-4410-a99c-168e1c0ed3dc"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3873,7 +3885,7 @@
         "id": "466Nt-jL_CH-",
         "outputId": "18f81251-4778-432c-cf45-f172323f5981"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3921,7 +3933,7 @@
         "id": "niFphlPkCQCx",
         "outputId": "3c4cdb78-ecc7-4a86-ee73-214ce149d81f"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3981,7 +3993,7 @@
         "id": "T05Fi9oEDZEH",
         "outputId": "46e654c5-5887-4892-dae3-517cf2b93e3a"
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4106,7 +4118,7 @@
         "id": "C2meOFTCLQYE",
         "outputId": "1729c212-015a-4377-cbb1-71e1c91c7601"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4141,7 +4153,7 @@
         "id": "j86NRYbHNfPr",
         "outputId": "793dc962-d85d-4432-e1d4-75c953670db6"
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4193,7 +4205,7 @@
         "id": "bRAgYNODNYF4",
         "outputId": "9e9cf1a0-d317-40b0-9f06-e7d4e1ba7a65"
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4229,7 +4241,7 @@
         "id": "8NwU2CMRH-rl",
         "outputId": "73db1ebb-8059-418f-f49d-124a692f991e"
       },
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4668,7 +4680,7 @@
         "id": "fB2lyDxUANay",
         "outputId": "908d8db1-96c5-43f9-e0dd-425ecd779afd"
       },
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4701,7 +4713,7 @@
         "id": "asJMHzCUEwtT",
         "outputId": "a0db743a-e144-46fd-b34b-44da7235b5b2"
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4764,7 +4776,7 @@
         "id": "uBxtnHOZPxIZ",
         "outputId": "3b1bdc74-f783-4003-db1a-9c83b707b1e4"
       },
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4813,7 +4825,7 @@
         "id": "5DjaZB3IPxNH",
         "outputId": "58bf243d-a1c3-4577-a8d2-37801a2460d6"
       },
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4863,7 +4875,7 @@
         "id": "yC5qzHFNPxPD",
         "outputId": "6d6b390b-9fa1-4f35-9dd7-fa310348ed5b"
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4922,7 +4934,7 @@
         },
         "outputId": "4eb40cb9-18c7-461e-bf81-27eaebd90129"
       },
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4975,7 +4987,7 @@
         },
         "outputId": "5ce8adec-3eae-4b43-f711-cafbbd09e3d6"
       },
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5024,7 +5036,7 @@
         },
         "outputId": "fad9e3fe-34f9-4a39-a1fc-01276be275ff"
       },
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5075,7 +5087,7 @@
         },
         "outputId": "4e61c5f3-ce33-4130-da18-5094a64f1dd8"
       },
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5121,7 +5133,7 @@
         },
         "outputId": "0ef06313-526f-4e0a-8e3a-a1f336582124"
       },
-      "execution_count": 91,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5175,7 +5187,7 @@
         },
         "outputId": "9a979169-1416-4967-ee76-5631be01b125"
       },
-      "execution_count": 95,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5206,7 +5218,7 @@
         },
         "outputId": "d4fa65c6-d849-49da-a098-f7f06d9ecb32"
       },
-      "execution_count": 96,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5243,7 +5255,7 @@
       "metadata": {
         "id": "AGRBaTaIMfFw"
       },
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5252,7 +5264,7 @@
       "metadata": {
         "id": "jW715sXtNyHb"
       },
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5261,7 +5273,7 @@
       "metadata": {
         "id": "P-P68SISFrhu"
       },
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5279,7 +5291,7 @@
       "metadata": {
         "id": "-Vrs-CcEGPpr"
       },
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": []
     },
     {
